--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "probot-app"
   ],
   "scripts": {
-    "start": "probot run ./index.js",
-    "test": "jest"
+    "start": "probot run ./index.js"
   },
   "dependencies": {
     "probot": "^12.2.4"
