--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "probot-app"
   ],
   "scripts": {
-    "start": "probot run ./index.js"
+    "start": "probot run ./index.js",
+    "test": "echo init run"
   },
   "dependencies": {
     "probot": "^12.2.4"
